significance tests and frontend fixes

--- a/RESEARCH/birthdate_deep_search.ipynb
+++ b/RESEARCH/birthdate_deep_search.ipynb
@@ -7,10 +7,19 @@
    "source": [
     "# 🧠 Deep Model Tuning for Bitcoin Birth DATE\n",
     "\n",
-    "Проверка гипотезы: \"Увеличение сложности модели поможет переварить транзиты к натальной карте\".\n",
+    "We are testing a simple idea: if the model is more complex, maybe it can \"digest\" the astrological transits to the natal chart better.\n",
     "\n",
-    "Дата: **2009-10-10** (Economic Birth / First Rate)\n",
-    "Признаки: Транзиты к наталу + Аспекты транзитов + Фазы (БЕЗ домов)"
+    "Date used as the \"birth\" of Bitcoin: **2009-10-10** (Economic Birth / First Rate)\n",
+    "Features used:\n",
+    "- Transits to the natal chart\n",
+    "- Aspects between transits\n",
+    "- Phases (NO houses)\n",
+    "\n",
+    "Plain words:\n",
+    "- \"Transits\" are where the planets are on each day.\n",
+    "- \"Natal\" means the sky position on the chosen birth date.\n",
+    "- \"Aspects\" are angle-based relationships between bodies.\n",
+    "- \"Phases\" are cycle positions (like Moon phases, but for other bodies too).\n"
    ]
   },
   {
@@ -20,18 +29,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Basic Python tools\n",
     "import sys\n",
     "from pathlib import Path\n",
+    "\n",
+    "# Data tools\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "# Grid search helper\n",
     "from itertools import product\n",
+    "\n",
+    "# Progress bar so we can see the loop is working\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "# Dates and time\n",
     "from datetime import datetime, date, timezone\n",
+    "\n",
+    "# Metrics to judge the model\n",
     "from sklearn.metrics import classification_report, matthews_corrcoef\n",
     "\n",
+    "# Make sure the project is on Python path\n",
     "PROJECT_ROOT = Path(\"/home/rut/ostrofun\")\n",
     "sys.path.insert(0, str(PROJECT_ROOT))\n",
     "\n",
+    "# Local project modules (they contain our astro + ML pipeline)\n",
     "from RESEARCH.config import cfg\n",
     "from RESEARCH.data_loader import load_market_data\n",
     "from RESEARCH.labeling import create_balanced_labels\n",
@@ -44,7 +66,14 @@
     "    get_natal_bodies,\n",
     ")\n",
     "from RESEARCH.features import build_full_features, merge_features_with_labels\n",
-    "from RESEARCH.model_training import split_dataset, prepare_xy, train_xgb_model, tune_threshold, predict_with_threshold, check_cuda_available"
+    "from RESEARCH.model_training import (\n",
+    "    split_dataset,\n",
+    "    prepare_xy,\n",
+    "    train_xgb_model,\n",
+    "    tune_threshold,\n",
+    "    predict_with_threshold,\n",
+    "    check_cuda_available,\n",
+    ")\n"
    ]
   },
   {
@@ -62,26 +91,39 @@
     }
    ],
    "source": [
+    "# ------------------------------------------------------------\n",
     "# Config\n",
+    "# ------------------------------------------------------------\n",
+    "# The \"birth date\" we treat as Bitcoin's natal chart date\n",
     "TARGET_DATE = date(2009, 10, 10)\n",
     "print(f\"🧠 Tuning for Birth Date: {TARGET_DATE}\")\n",
     "\n",
+    "# Astro feature settings\n",
     "ASTRO_CONFIG = {\n",
+    "    # Use both geocentric and heliocentric coordinates\n",
     "    \"coord_mode\": \"both\",\n",
+    "    # Orb multiplier (how wide we allow an aspect to count)\n",
     "    \"orb_mult\": 0.1,\n",
+    "    # Window and std for Gaussian labeling (smooth target labels)\n",
     "    \"gauss_window\": 200,\n",
     "    \"gauss_std\": 70.0,\n",
+    "    # If we want to exclude some bodies, we can put them here\n",
     "    \"exclude_bodies\": None,\n",
     "}\n",
     "\n",
+    "# ------------------------------------------------------------\n",
     "# Deep Grid Search Space\n",
+    "# ------------------------------------------------------------\n",
+    "# We try many model sizes and settings to see what works best.\n",
+    "# Think of it like trying many oven temperatures to bake a cake\n",
+    "# and picking the one that tastes best.\n",
     "PARAM_GRID = {\n",
-    "    \"n_estimators\": [ 500, 900,1300],\n",
-    "    \"max_depth\": [ 6, 8, 10],  # Пробуем глубокие деревья\n",
+    "    \"n_estimators\": [500, 900, 1300],\n",
+    "    \"max_depth\": [6, 8, 10],  # deeper trees = more complex model\n",
     "    \"learning_rate\": [0.05, 0.03],\n",
-    "    \"colsample_bytree\": [0.6, 0.8], \n",
+    "    \"colsample_bytree\": [0.6, 0.8],\n",
     "    \"subsample\": [0.8],\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -177,48 +219,97 @@
     }
    ],
    "source": [
+    "# ------------------------------------------------------------\n",
     "# 1. Prepare Data\n",
+    "# ------------------------------------------------------------\n",
     "print(\"Loading data...\")\n",
+    "\n",
+    "# Load market data (price history)\n",
     "df_market = load_market_data()\n",
+    "\n",
+    "# Use recent years only (we do not train on very early data)\n",
     "df_market = df_market[df_market[\"date\"] >= \"2017-11-01\"].reset_index(drop=True)\n",
-    "df_labels = create_balanced_labels(df_market, ASTRO_CONFIG[\"gauss_window\"], ASTRO_CONFIG[\"gauss_std\"])\n",
+    "\n",
+    "# Create balanced labels using a smooth Gaussian window\n",
+    "# This means the target is not just 0/1 noise, it is smoothed in time\n",
+    "# so the model can learn more stable patterns.\n",
+    "df_labels = create_balanced_labels(\n",
+    "    df_market,\n",
+    "    ASTRO_CONFIG[\"gauss_window\"],\n",
+    "    ASTRO_CONFIG[\"gauss_std\"],\n",
+    ")\n",
+    "\n",
+    "# Initialize ephemeris (astronomy data engine)\n",
     "settings = init_ephemeris()\n",
+    "\n",
+    "# Check if GPU is available for faster training\n",
     "_, device = check_cuda_available()\n",
     "\n",
     "print(\"Calculating astro...\")\n",
+    "\n",
+    "# Calculate positions of all bodies for each date\n",
+    "# We ask for both geocentric and heliocentric modes.\n",
     "df_bodies, geo_by_date, helio_by_date = calculate_bodies_for_dates_multi(\n",
-    "    df_market[\"date\"], settings, coord_mode=\"both\"\n",
+    "    df_market[\"date\"],\n",
+    "    settings,\n",
+    "    coord_mode=\"both\",\n",
     ")\n",
+    "\n",
+    "# Use geocentric positions as the base for aspects/transits\n",
     "bodies_by_date = geo_by_date\n",
+    "\n",
+    "# Calculate phases (cycle positions) for each date\n",
+    "# Phases are like \"where in the cycle\" each body is.\n",
     "df_phases = calculate_phases_for_dates(bodies_by_date)\n",
     "\n",
+    "# ------------------------------------------------------------\n",
     "# 2. Build Natal Features\n",
+    "# ------------------------------------------------------------\n",
     "print(f\"Building natal features for {TARGET_DATE}...\")\n",
+    "\n",
+    "# We use noon time to avoid timezone edge cases\n",
     "natal_dt_str = f\"{TARGET_DATE.isoformat()}T12:00:00\"\n",
+    "\n",
+    "# Get natal positions (sky map on the birth date)\n",
     "natal_bodies = get_natal_bodies(natal_dt_str, settings)\n",
     "\n",
+    "# Transits: how the current sky relates to the natal sky\n",
+    "# These are the core \"natal transit\" features\n",
     "df_transits = calculate_transits_for_dates(\n",
-    "    bodies_by_date, natal_bodies, settings, \n",
-    "    orb_mult=ASTRO_CONFIG[\"orb_mult\"]\n",
+    "    bodies_by_date,\n",
+    "    natal_bodies,\n",
+    "    settings,\n",
+    "    orb_mult=ASTRO_CONFIG[\"orb_mult\"],\n",
     ")\n",
     "\n",
-    "# Аспекты между транзитами (Baseline features)\n",
+    "# Aspects between transiting bodies (baseline features)\n",
     "df_aspects = calculate_aspects_for_dates(\n",
-    "    bodies_by_date, settings, \n",
-    "    orb_mult=ASTRO_CONFIG[\"orb_mult\"]\n",
+    "    bodies_by_date,\n",
+    "    settings,\n",
+    "    orb_mult=ASTRO_CONFIG[\"orb_mult\"],\n",
     ")\n",
     "\n",
+    "# ------------------------------------------------------------\n",
     "# 3. Full Dataset\n",
+    "# ------------------------------------------------------------\n",
     "print(\"Merging dataset...\")\n",
+    "\n",
+    "# Combine all feature blocks into one wide table\n",
+    "# We include both baseline aspects and natal transits.\n",
     "df_features = build_full_features(\n",
-    "    df_bodies, df_aspects, df_transits=df_transits, df_phases=df_phases, \n",
-    "    include_pair_aspects=True,    # Включаем baseline аспекты\n",
-    "    include_transit_aspects=True  # Включаем натальные транзиты\n",
+    "    df_bodies,\n",
+    "    df_aspects,\n",
+    "    df_transits=df_transits,\n",
+    "    df_phases=df_phases,\n",
+    "    include_pair_aspects=True,    # baseline aspects\n",
+    "    include_transit_aspects=True,  # natal transits\n",
     ")\n",
+    "\n",
+    "# Merge features with labels to make the final training dataset\n",
     "df_dataset = merge_features_with_labels(df_features, df_labels)\n",
     "\n",
     "print(f\"Dataset Shape: {df_dataset.shape}\")\n",
-    "print(f\"Columns: {len(df_dataset.columns)}\")"
+    "print(f\"Columns: {len(df_dataset.columns)}\")\n"
    ]
   },
   {
@@ -748,11 +839,18 @@
     }
    ],
    "source": [
+    "# ------------------------------------------------------------\n",
     "# 4. Grid Search\n",
+    "# ------------------------------------------------------------\n",
     "print(\"🚀 Starting Deep Grid Search...\")\n",
     "\n",
+    "# Split into train / validation / test so we can judge honestly\n",
     "train_df, val_df, test_df = split_dataset(df_dataset)\n",
+    "\n",
+    "# Features are all columns except date and target label\n",
     "feature_cols = [c for c in df_dataset.columns if c not in [\"date\", \"target\"]]\n",
+    "\n",
+    "# Convert dataframes into X (features) and y (labels)\n",
     "X_train, y_train = prepare_xy(train_df, feature_cols)\n",
     "X_val, y_val = prepare_xy(val_df, feature_cols)\n",
     "X_test, y_test = prepare_xy(test_df, feature_cols)\n",
@@ -761,28 +859,48 @@
     "keys = PARAM_GRID.keys()\n",
     "combinations = list(product(*PARAM_GRID.values()))\n",
     "\n",
+    "# Try every combination of parameters\n",
     "for vals in tqdm(combinations, desc=\"Grid Search\"):\n",
     "    params = dict(zip(keys, vals))\n",
-    "    \n",
-    "    # Train\n",
+    "\n",
+    "    # Train a model with these parameters\n",
     "    model = train_xgb_model(\n",
-    "        X_train, y_train, X_val, y_val, feature_cols, \n",
-    "        n_classes=2, device=device, early_stopping_rounds=50, verbose=False,\n",
-    "        **params\n",
+    "        X_train,\n",
+    "        y_train,\n",
+    "        X_val,\n",
+    "        y_val,\n",
+    "        feature_cols,\n",
+    "        n_classes=2,\n",
+    "        device=device,\n",
+    "        early_stopping_rounds=50,\n",
+    "        verbose=False,\n",
+    "        **params,\n",
     "    )\n",
-    "    \n",
-    "    # Evaluate\n",
+    "\n",
+    "    # Choose the best classification threshold on validation data\n",
+    "    # We use recall_min to keep both classes balanced.\n",
     "    best_t, _ = tune_threshold(model, X_val, y_val, metric=\"recall_min\")\n",
+    "\n",
+    "    # Predict on test data using that threshold\n",
     "    y_test_pred = predict_with_threshold(model, X_test, threshold=best_t)\n",
-    "    \n",
-    "    report = classification_report(y_test, y_test_pred, output_dict=True, zero_division=0)\n",
+    "\n",
+    "    # Evaluate with two metrics:\n",
+    "    # R_MIN = minimum recall of the two classes (fairness)\n",
+    "    # MCC = Matthews correlation coefficient (balanced quality)\n",
+    "    report = classification_report(\n",
+    "        y_test,\n",
+    "        y_test_pred,\n",
+    "        output_dict=True,\n",
+    "        zero_division=0,\n",
+    "    )\n",
     "    r_min = min(report[\"0\"][\"recall\"], report[\"1\"][\"recall\"])\n",
     "    mcc = matthews_corrcoef(y_test, y_test_pred)\n",
-    "    \n",
+    "\n",
+    "    # Save the result\n",
     "    res_row = params.copy()\n",
     "    res_row[\"R_MIN\"] = r_min\n",
     "    res_row[\"MCC\"] = mcc\n",
-    "    results.append(res_row)"
+    "    results.append(res_row)\n"
    ]
   },
   {
@@ -829,21 +947,37 @@
     }
    ],
    "source": [
+    "# ------------------------------------------------------------\n",
     "# 5. Analysis\n",
+    "# ------------------------------------------------------------\n",
+    "# Sort by the metric we care about most (R_MIN)\n",
     "df_res = pd.DataFrame(results).sort_values(\"R_MIN\", ascending=False)\n",
-    "print(\"\\n🏆 TOP 10 MODELS:\")\n",
+    "\n",
+    "print(\"\n",
+    "🏆 TOP 10 MODELS:\")\n",
     "print(df_res.head(10))\n",
     "\n",
+    "# Best row is the first after sorting\n",
     "best = df_res.iloc[0]\n",
-    "print(f\"\\n🥇 WINNER PARAMS:\")\n",
+    "print(f\"\n",
+    "🥇 WINNER PARAMS:\")\n",
     "print(best.to_dict())\n",
     "\n",
+    "# Compare with a known baseline score\n",
     "baseline_rmin = 0.587\n",
     "if best[\"R_MIN\"] > baseline_rmin:\n",
-    "    print(f\"\\n🚀 SUCCESS! Deep model beat baseline! ({best['R_MIN']:.3f} > {baseline_rmin})\")\n",
+    "    print(\n",
+    "        f\"\n",
+    "🚀 SUCCESS! Deep model beat baseline! \"\n",
+    "        f\"({best['R_MIN']:.3f} > {baseline_rmin})\"\n",
+    "    )\n",
     "else:\n",
-    "    print(f\"\\n💀 FAILURE. Still can't beat baseline. ({best['R_MIN']:.3f} <= {baseline_rmin})\")\n",
-    "    print(\"Hypothesis: Natal features are just noise.\")"
+    "    print(\n",
+    "        f\"\n",
+    "💀 FAILURE. Still can't beat baseline. \"\n",
+    "        f\"({best['R_MIN']:.3f} <= {baseline_rmin})\"\n",
+    "    )\n",
+    "    print(\"Hypothesis: Natal features are just noise.\")\n"
    ]
   },
   {
@@ -866,19 +1000,21 @@
     }
    ],
    "source": [
+    "# ------------------------------------------------------------\n",
     "# 6. Export Best Model for Production Service\n",
+    "# ------------------------------------------------------------\n",
     "import joblib\n",
     "\n",
-    "# Retrain best model to save it\n",
+    "# Retrain the best model so we can save a clean final version\n",
     "best_params = best.to_dict()\n",
     "print(f\"🔄 Retraining best model with params: {best_params}\")\n",
     "\n",
-    "# Get only XGBoost params (filter out metrics) and fix types\n",
+    "# Keep only XGBoost parameters and fix types\n",
+    "# (some numbers are floats in the table but should be ints)\n",
     "xgb_params = {}\n",
     "for k, v in best_params.items():\n",
     "    if k in [\"R_MIN\", \"MCC\"]:\n",
     "        continue\n",
-    "    # Convert int params from float to int\n",
     "    if k in [\"n_estimators\", \"max_depth\"]:\n",
     "        xgb_params[k] = int(v)\n",
     "    else:\n",
@@ -888,12 +1024,20 @@
     "\n",
     "# Train final model with best params\n",
     "final_model = train_xgb_model(\n",
-    "    X_train, y_train, X_val, y_val, feature_cols, \n",
-    "    n_classes=2, device=device, early_stopping_rounds=50, verbose=False,\n",
-    "    **xgb_params\n",
+    "    X_train,\n",
+    "    y_train,\n",
+    "    X_val,\n",
+    "    y_val,\n",
+    "    feature_cols,\n",
+    "    n_classes=2,\n",
+    "    device=device,\n",
+    "    early_stopping_rounds=50,\n",
+    "    verbose=False,\n",
+    "    **xgb_params,\n",
     ")\n",
     "\n",
-    "# Prepare model data for export\n",
+    "# Prepare a package for export\n",
+    "# We save both the model and the context needed to reuse it later.\n",
     "model_data = {\n",
     "    \"model\": final_model,\n",
     "    \"feature_names\": feature_cols,\n",
@@ -910,7 +1054,7 @@
     "        # Metrics\n",
     "        \"r_min\": float(best[\"R_MIN\"]),\n",
     "        \"mcc\": float(best[\"MCC\"]),\n",
-    "    }\n",
+    "    },\n",
     "}\n",
     "\n",
     "# Save to models_artifacts\n",
