--- a/RESEARCH2/Moon_cycles/moon_cycles_deep_search.ipynb
+++ b/RESEARCH2/Moon_cycles/moon_cycles_deep_search.ipynb
@@ -94,6 +94,10 @@
     "USE_CACHE = True\n",
     "VERBOSE = True\n",
     "\n",
+    "# Temporary protocol switch requested by user:\n",
+    "# Disable walk-forward evaluation for now.\n",
+    "ENABLE_WALK_FORWARD = False\n",
+    "\n",
     "# Label parameters that stay fixed while we tune Gaussian window/std.\n",
     "LABEL_CFG = MoonLabelConfig(\n",
     "    horizon=1,\n",
@@ -130,7 +134,8 @@
     ")\n",
     "\n",
     "print('Config loaded.')\n",
-    "print('Gaussian grid size =', len(GAUSS_WINDOWS) * len(GAUSS_STDS))"
+    "print('Gaussian grid size =', len(GAUSS_WINDOWS) * len(GAUSS_STDS))\n",
+    "print('ENABLE_WALK_FORWARD =', ENABLE_WALK_FORWARD)"
    ]
   },
   {
@@ -278,22 +283,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "walk_search = run_gauss_search(\n",
-    "    df_market=df_market,\n",
-    "    df_moon_features=df_moon_features,\n",
-    "    gauss_windows=GAUSS_WINDOWS,\n",
-    "    gauss_stds=GAUSS_STDS,\n",
-    "    label_cfg=LABEL_CFG,\n",
-    "    model_cfg=MODEL_CFG,\n",
-    "    wf_cfg=WF_CFG,\n",
-    "    protocol='walk_forward',\n",
-    "    use_cache=USE_CACHE,\n",
-    "    verbose=VERBOSE,\n",
-    ")\n",
+    "if ENABLE_WALK_FORWARD:\n",
+    "    walk_search = run_gauss_search(\n",
+    "        df_market=df_market,\n",
+    "        df_moon_features=df_moon_features,\n",
+    "        gauss_windows=GAUSS_WINDOWS,\n",
+    "        gauss_stds=GAUSS_STDS,\n",
+    "        label_cfg=LABEL_CFG,\n",
+    "        model_cfg=MODEL_CFG,\n",
+    "        wf_cfg=WF_CFG,\n",
+    "        protocol='walk_forward',\n",
+    "        use_cache=USE_CACHE,\n",
+    "        verbose=VERBOSE,\n",
+    "    )\n",
     "\n",
-    "walk_table = walk_search['results_table']\n",
-    "print('Walk-forward search completed. Top rows:')\n",
-    "display(walk_table.head(10))"
+    "    walk_table = walk_search['results_table']\n",
+    "    print('Walk-forward search completed. Top rows:')\n",
+    "    display(walk_table.head(10))\n",
+    "else:\n",
+    "    walk_search = None\n",
+    "    walk_table = pd.DataFrame()\n",
+    "    print('Walk-forward evaluation is temporarily disabled (ENABLE_WALK_FORWARD=False).')"
    ]
   },
   {
@@ -308,48 +318,51 @@
     "# -----------------------------------------------------------\n",
     "# We evaluate on concatenated test blocks from all folds.\n",
     "\n",
-    "walk_best = walk_search['best_result']\n",
-    "walk_best_row = walk_search['best_row']\n",
-    "print('Best walk-forward config:')\n",
-    "display(pd.DataFrame([walk_best_row]))\n",
+    "if ENABLE_WALK_FORWARD and walk_search is not None:\n",
+    "    walk_best = walk_search['best_result']\n",
+    "    walk_best_row = walk_search['best_row']\n",
+    "    print('Best walk-forward config:')\n",
+    "    display(pd.DataFrame([walk_best_row]))\n",
     "\n",
-    "walk_pred = walk_best['predictions'].copy()\n",
-    "walk_test = walk_pred[walk_pred['split_role'] == 'test'].copy().reset_index(drop=True)\n",
-    "walk_test = walk_test.dropna(subset=['pred_label'])\n",
+    "    walk_pred = walk_best['predictions'].copy()\n",
+    "    walk_test = walk_pred[walk_pred['split_role'] == 'test'].copy().reset_index(drop=True)\n",
+    "    walk_test = walk_test.dropna(subset=['pred_label'])\n",
     "\n",
-    "print('Walk-forward concatenated test rows:', len(walk_test))\n",
+    "    print('Walk-forward concatenated test rows:', len(walk_test))\n",
     "\n",
-    "# BEFORE training: majority baseline per fold (already stored in merged test stream).\n",
-    "walk_before = evaluate_with_visuals(\n",
-    "    df_plot=walk_test,\n",
-    "    y_true=walk_test['target'].to_numpy(dtype=np.int32),\n",
-    "    y_pred=walk_test['baseline_majority'].to_numpy(dtype=np.int32),\n",
-    "    y_prob_up=None,\n",
-    "    title='Walk-forward - BEFORE training (majority baseline)',\n",
-    "    vis_cfg=VIS_CFG,\n",
-    "    show_visuals=True,\n",
-    ")\n",
+    "    # BEFORE training: majority baseline per fold (already stored in merged test stream).\n",
+    "    walk_before = evaluate_with_visuals(\n",
+    "        df_plot=walk_test,\n",
+    "        y_true=walk_test['target'].to_numpy(dtype=np.int32),\n",
+    "        y_pred=walk_test['baseline_majority'].to_numpy(dtype=np.int32),\n",
+    "        y_prob_up=None,\n",
+    "        title='Walk-forward - BEFORE training (majority baseline)',\n",
+    "        vis_cfg=VIS_CFG,\n",
+    "        show_visuals=True,\n",
+    "    )\n",
     "\n",
-    "# AFTER training: model predictions from each fold test block.\n",
-    "walk_after = evaluate_with_visuals(\n",
-    "    df_plot=walk_test,\n",
-    "    y_true=walk_test['target'].to_numpy(dtype=np.int32),\n",
-    "    y_pred=walk_test['pred_label'].to_numpy(dtype=np.int32),\n",
-    "    y_prob_up=walk_test['pred_proba_up'].to_numpy(dtype=float),\n",
-    "    title='Walk-forward - AFTER training (Moon-only model)',\n",
-    "    vis_cfg=VIS_CFG,\n",
-    "    show_visuals=True,\n",
-    ")\n",
+    "    # AFTER training: model predictions from each fold test block.\n",
+    "    walk_after = evaluate_with_visuals(\n",
+    "        df_plot=walk_test,\n",
+    "        y_true=walk_test['target'].to_numpy(dtype=np.int32),\n",
+    "        y_pred=walk_test['pred_label'].to_numpy(dtype=np.int32),\n",
+    "        y_prob_up=walk_test['pred_proba_up'].to_numpy(dtype=float),\n",
+    "        title='Walk-forward - AFTER training (Moon-only model)',\n",
+    "        vis_cfg=VIS_CFG,\n",
+    "        show_visuals=True,\n",
+    "    )\n",
     "\n",
-    "walk_random_metrics = compute_binary_metrics(\n",
-    "    y_true=walk_test['target'].to_numpy(dtype=np.int32),\n",
-    "    y_pred=walk_test['baseline_random'].to_numpy(dtype=np.int32),\n",
-    ")\n",
-    "print('Walk-forward random baseline metrics:', walk_random_metrics)\n",
+    "    walk_random_metrics = compute_binary_metrics(\n",
+    "        y_true=walk_test['target'].to_numpy(dtype=np.int32),\n",
+    "        y_pred=walk_test['baseline_random'].to_numpy(dtype=np.int32),\n",
+    "    )\n",
+    "    print('Walk-forward random baseline metrics:', walk_random_metrics)\n",
     "\n",
-    "if 'fold_table' in walk_best:\n",
-    "    print('Per-fold quality table:')\n",
-    "    display(walk_best['fold_table'])"
+    "    if 'fold_table' in walk_best:\n",
+    "        print('Per-fold quality table:')\n",
+    "        display(walk_best['fold_table'])\n",
+    "else:\n",
+    "    print('Walk-forward section skipped because ENABLE_WALK_FORWARD=False.')"
    ]
   },
   {
@@ -363,16 +376,22 @@
     "# Compare best protocol summaries side by side\n",
     "# -------------------------------------------\n",
     "\n",
-    "comparison = pd.DataFrame([\n",
+    "comparison_rows = [\n",
     "    {\n",
     "        'protocol': 'classic_70_15_15',\n",
     "        **classic_search['best_row'],\n",
-    "    },\n",
-    "    {\n",
-    "        'protocol': 'walk_forward',\n",
-    "        **walk_search['best_row'],\n",
-    "    },\n",
-    "])\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "if ENABLE_WALK_FORWARD and walk_search is not None:\n",
+    "    comparison_rows.append(\n",
+    "        {\n",
+    "            'protocol': 'walk_forward',\n",
+    "            **walk_search['best_row'],\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "comparison = pd.DataFrame(comparison_rows)\n",
     "\n",
     "cols_order = [\n",
     "    'protocol',\n",
@@ -384,13 +403,16 @@
     "    'test_recall_min',\n",
     "    'test_recall_down',\n",
     "    'test_recall_up',\n",
+    "    'test_recall_gap',\n",
+    "    'test_target_imbalance',\n",
     "    'baseline_majority_test_acc',\n",
     "    'baseline_random_test_acc',\n",
     "    'p_value_vs_random',\n",
     "]\n",
     "\n",
+    "present_cols = [c for c in cols_order if c in comparison.columns]\n",
     "print('Best candidates comparison:')\n",
-    "display(comparison[cols_order])"
+    "display(comparison[present_cols])"
    ]
   },
   {
@@ -417,8 +439,11 @@
     "plot_gauss_heatmap(classic_table, 'test_recall_min', 'Classic: Recall_MIN by Gaussian params')\n",
     "plot_gauss_heatmap(classic_table, 'test_mcc', 'Classic: MCC by Gaussian params')\n",
     "\n",
-    "plot_gauss_heatmap(walk_table, 'test_recall_min', 'Walk-forward: Recall_MIN by Gaussian params')\n",
-    "plot_gauss_heatmap(walk_table, 'test_mcc', 'Walk-forward: MCC by Gaussian params')"
+    "if ENABLE_WALK_FORWARD and not walk_table.empty:\n",
+    "    plot_gauss_heatmap(walk_table, 'test_recall_min', 'Walk-forward: Recall_MIN by Gaussian params')\n",
+    "    plot_gauss_heatmap(walk_table, 'test_mcc', 'Walk-forward: MCC by Gaussian params')\n",
+    "else:\n",
+    "    print('Walk-forward heatmaps skipped because ENABLE_WALK_FORWARD=False.')"
    ]
   },
   {
