--- a/RESEARCH2/Moon_cycles/moon_cycles_deep_search_v3.ipynb
+++ b/RESEARCH2/Moon_cycles/moon_cycles_deep_search_v3.ipynb
@@ -405,17 +405,32 @@
     "    display(best_by_val_final)\n",
     "\n",
     "    # Visual diagnostics for each winner model.\n",
+    "    #\n",
+    "    # NOTE (important): in bakeoff_utils we currently store model probabilities and\n",
+    "    # predicted labels only for the TEST rows (to keep caching smaller and to avoid\n",
+    "    # accidental confusion with train/val).\n",
+    "    #\n",
+    "    # That is why we slice split_role=='test' below.\n",
     "    for model_name, run in best_runs_final.items():\n",
+    "        pred = run['predictions'].copy()\n",
+    "        df_test_plot = pred[pred['split_role'] == 'test'].copy().reset_index(drop=True)\n",
+    "\n",
+    "        # Defensive cleaning: visuals and metrics should never see NaNs.\n",
+    "        df_test_plot = df_test_plot.dropna(subset=['close', 'target', 'pred_label', 'pred_proba_up']).reset_index(drop=True)\n",
+    "\n",
+    "        y_true = df_test_plot['target'].to_numpy(dtype=int)\n",
+    "        y_pred = df_test_plot['pred_label'].to_numpy(dtype=int)\n",
+    "        y_prob = df_test_plot['pred_proba_up'].to_numpy(dtype=float)\n",
+    "\n",
     "        evaluate_with_visuals(\n",
-    "            run=run,\n",
-    "            title=f\"FINAL (orb={orb:.2f}) \u2014 {model_name.upper()} \u2014 Full ephemeris\",\n",
+    "            df_plot=df_test_plot,\n",
+    "            y_true=y_true,\n",
+    "            y_pred=y_pred,\n",
+    "            y_prob_up=y_prob,\n",
+    "            title=f\"FINAL (orb={orb:.2f}) \u2014 {model_name.upper()} \u2014 Full ephemeris (TEST only)\",\n",
     "            vis_cfg=VIS_CFG,\n",
-    "            show_confusion=True,\n",
-    "            show_price_background=True,\n",
-    "            show_rolling=True,\n",
-    "            show_probability_hist=True,\n",
-    "            show_threshold_info=True,\n",
-    "        )"
+    "            show_visuals=True,\n",
+    "        )\n"
    ]
   }
  ],
