super deep grid search with birthdate and all available features

--- a/RESEARCH2/Moon_cycles/moon_cycles_nn_honest_trading.ipynb
+++ b/RESEARCH2/Moon_cycles/moon_cycles_nn_honest_trading.ipynb
@@ -97,7 +97,7 @@
     ")\n",
     "from RESEARCH2.Moon_cycles.threshold_utils import tune_threshold_with_balance, predict_proba_up_safe\n",
     "\n",
-    "from RESEARCH.model_training import train_xgb_model\n",
+    "from RESEARCH.model_training import train_xgb_model, check_cuda_available\n",
     "from RESEARCH2.Moon_cycles.eval_visuals import VisualizationConfig\n",
     "from RESEARCH2.Moon_cycles.trading_utils import (\n",
     "    TradingConfig,\n",
@@ -177,6 +177,7 @@
     "\n",
     "USE_CACHE = True\n",
     "VERBOSE = True\n",
+    "XGB_USE_CUDA, XGB_DEVICE = check_cuda_available()\n",
     "\n",
     "\n",
     "def make_ephem_cfg(orb_mult: float) -> EphemerisFeatureConfig:\n",
@@ -195,8 +196,9 @@
     "\n",
     "\n",
     "print('Config loaded.')\n",
+    "print('XGB device:', XGB_DEVICE, '(CUDA available:', XGB_USE_CUDA, ')')\n",
     "print('ORB_MULT=', ORB_MULT)\n",
-    "print('GAUSS_WINDOW/STD=', GAUSS_WINDOW, GAUSS_STD)"
+    "print('GAUSS_WINDOW/STD=', GAUSS_WINDOW, GAUSS_STD)\n"
    ]
   },
   {
@@ -334,7 +336,7 @@
     "        y_val=y_val,\n",
     "        feature_names=feature_cols,\n",
     "        n_classes=2,\n",
-    "        device='cpu',\n",
+    "        device=XGB_DEVICE,\n",
     "        verbose=False,\n",
     "        early_stopping_rounds=50,\n",
     "        n_estimators=500,\n",
