--- a/RESEARCH2/Moon_cycles/moon_cycles_classic_transit_blocks2.ipynb
+++ b/RESEARCH2/Moon_cycles/moon_cycles_classic_transit_blocks2.ipynb
@@ -70,7 +70,7 @@
     "    build_balanced_labels_for_gauss,\n",
     ")\n",
     "from RESEARCH2.Moon_cycles.splits import make_classic_split\n",
-    "from RESEARCH2.Moon_cycles.threshold_utils import tune_threshold_with_balance, predict_proba_up_safe\n",
+    "from RESEARCH2.Moon_cycles.threshold_utils import tune_threshold_with_balance, predict_proba_up_safe, evaluate_threshold_grid\n",
     "from RESEARCH2.Moon_cycles.eval_utils import compute_binary_metrics, compute_statistical_significance\n",
     "\n",
     "pd.set_option('display.max_columns', 200)\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "6b6170dc",
    "metadata": {},
    "outputs": [
@@ -160,11 +160,13 @@
     "# Threshold tuning objective penalties.\n",
     "THRESHOLD_GAP_PENALTY = 0.25\n",
     "THRESHOLD_PRIOR_PENALTY = 0.05\n",
+    "THRESHOLD_CANDIDATE_GRID = np.linspace(0.01, 0.99, 197)\n",
+    "THRESHOLD_CURVE_TOP_K = 10\n",
     "\n",
     "# Optional sensitivity sweep for threshold penalties (no model retraining).\n",
-    "ENABLE_THRESHOLD_SENSITIVITY = False\n",
-    "THRESHOLD_GAP_PENALTY_GRID = [0.10, 0.25, 0.40]\n",
-    "THRESHOLD_PRIOR_PENALTY_GRID = [0.00, 0.05, 0.10]\n",
+    "ENABLE_THRESHOLD_SENSITIVITY = True\n",
+    "THRESHOLD_GAP_PENALTY_GRID = [0.00, 0.10, 0.25, 0.40, 0.80]\n",
+    "THRESHOLD_PRIOR_PENALTY_GRID = [0.00, 0.05, 0.10, 0.20, 0.40]\n",
     "\n",
     "# Feature blocks.\n",
     "FEATURE_BLOCKS = {\n",
@@ -221,7 +223,9 @@
     "print('Use transit pair aspects:', CLASSIC_INCLUDE_TRANSIT_PAIR_ASPECTS)\n",
     "print('XGB device:', XGB_DEVICE, '(CUDA available:', XGB_USE_CUDA, ')')\n",
     "print('Sweep enabled:', ENABLE_GAUSS_HYPER_SWEEP)\n",
-    "print('Threshold sensitivity:', ENABLE_THRESHOLD_SENSITIVITY)\n"
+    "print('Threshold sensitivity:', ENABLE_THRESHOLD_SENSITIVITY)\n",
+    "print('Threshold grid points:', len(THRESHOLD_CANDIDATE_GRID), 'range=', (float(np.min(THRESHOLD_CANDIDATE_GRID)), float(np.max(THRESHOLD_CANDIDATE_GRID))))\n",
+    "print('Threshold penalties grid sizes:', len(THRESHOLD_GAP_PENALTY_GRID), 'x', len(THRESHOLD_PRIOR_PENALTY_GRID))\n"
    ]
   },
   {
@@ -882,6 +886,7 @@
     "    model_name: str,\n",
     "    gap_penalty: float,\n",
     "    prior_penalty: float,\n",
+    "    thresholds: np.ndarray | None = None,\n",
     "    include_test: bool = True,\n",
     ") -> dict:\n",
     "    df_val = pred_all[pred_all['split_role'] == 'val']\n",
@@ -893,6 +898,7 @@
     "        proba_up=p_val,\n",
     "        gap_penalty=float(gap_penalty),\n",
     "        prior_penalty=float(prior_penalty),\n",
+    "        thresholds=thresholds,\n",
     "    )\n",
     "\n",
     "    out = {\n",
@@ -933,6 +939,7 @@
     "        model_name=model_name,\n",
     "        gap_penalty=THRESHOLD_GAP_PENALTY,\n",
     "        prior_penalty=THRESHOLD_PRIOR_PENALTY,\n",
+    "        thresholds=THRESHOLD_CANDIDATE_GRID,\n",
     "        include_test=include_test,\n",
     "    )\n",
     "\n",
@@ -3693,8 +3700,13 @@
     "\n",
     "    if ENABLE_THRESHOLD_SENSITIVITY:\n",
     "        sensitivity_rows = []\n",
+    "        curve_rows = []\n",
     "\n",
     "        for rec in final_pred_records:\n",
+    "            df_val_pred = rec['pred_all'][rec['pred_all']['split_role'] == 'val']\n",
+    "            y_val_curve = df_val_pred['target'].to_numpy(dtype=int)\n",
+    "            p_val_curve = df_val_pred['pred_proba_up'].to_numpy(dtype=float)\n",
+    "\n",
     "            for gap_penalty in THRESHOLD_GAP_PENALTY_GRID:\n",
     "                for prior_penalty in THRESHOLD_PRIOR_PENALTY_GRID:\n",
     "                    sr = eval_row_from_pred(\n",
@@ -3702,6 +3714,7 @@
     "                        model_name=rec['model'],\n",
     "                        gap_penalty=float(gap_penalty),\n",
     "                        prior_penalty=float(prior_penalty),\n",
+    "                        thresholds=THRESHOLD_CANDIDATE_GRID,\n",
     "                        include_test=True,\n",
     "                    )\n",
     "                    sr['birth_date'] = rec['birth_date']\n",
@@ -3711,6 +3724,25 @@
     "                    sr['model_params_json'] = rec['model_params_json']\n",
     "                    sensitivity_rows.append(sr)\n",
     "\n",
+    "                    df_curve = evaluate_threshold_grid(\n",
+    "                        y_true=y_val_curve,\n",
+    "                        proba_up=p_val_curve,\n",
+    "                        gap_penalty=float(gap_penalty),\n",
+    "                        prior_penalty=float(prior_penalty),\n",
+    "                        thresholds=THRESHOLD_CANDIDATE_GRID,\n",
+    "                    )\n",
+    "                    if not df_curve.empty:\n",
+    "                        df_curve = df_curve.head(int(THRESHOLD_CURVE_TOP_K)).copy()\n",
+    "                        df_curve['model'] = rec['model']\n",
+    "                        df_curve['birth_date'] = rec['birth_date']\n",
+    "                        df_curve['birth_dt_utc'] = rec['birth_dt_utc']\n",
+    "                        df_curve['gauss_window'] = rec['gauss_window']\n",
+    "                        df_curve['gauss_std'] = rec['gauss_std']\n",
+    "                        df_curve['model_params_json'] = rec['model_params_json']\n",
+    "                        df_curve['threshold_gap_penalty'] = float(gap_penalty)\n",
+    "                        df_curve['threshold_prior_penalty'] = float(prior_penalty)\n",
+    "                        curve_rows.append(df_curve)\n",
+    "\n",
     "        df_threshold_sensitivity = pd.DataFrame(sensitivity_rows).sort_values(\n",
     "            ['model', 'birth_date', 'gauss_window', 'gauss_std', 'val_recall_min', 'val_recall_gap', 'val_mcc', 'val_accuracy'],\n",
     "            ascending=[True, True, True, True, False, True, False, False],\n",
@@ -3719,7 +3751,7 @@
     "        print('Threshold penalty sensitivity (no retrain; threshold retuned on val):')\n",
     "        display(df_threshold_sensitivity[[\n",
     "            'model', 'birth_date', 'birth_dt_utc', 'gauss_window', 'gauss_std', 'model_params_json',\n",
-    "            'threshold_gap_penalty', 'threshold_prior_penalty', 'val_threshold',\n",
+    "            'threshold_gap_penalty', 'threshold_prior_penalty', 'val_threshold', 'val_threshold_score',\n",
     "            'val_accuracy', 'val_mcc', 'val_recall_min', 'val_recall_gap',\n",
     "            'test_accuracy', 'test_mcc', 'test_recall_min', 'test_recall_gap', 'test_p_value_vs_random',\n",
     "        ]])\n",
@@ -3734,10 +3766,32 @@
     "        print('Best threshold-penalty combo per selected final model config:')\n",
     "        display(df_threshold_sensitivity_best[[\n",
     "            'model', 'birth_date', 'gauss_window', 'gauss_std',\n",
-    "            'threshold_gap_penalty', 'threshold_prior_penalty', 'val_threshold',\n",
+    "            'threshold_gap_penalty', 'threshold_prior_penalty', 'val_threshold', 'val_threshold_score',\n",
     "            'val_accuracy', 'val_mcc', 'val_recall_min', 'val_recall_gap',\n",
     "            'test_accuracy', 'test_mcc', 'test_recall_min', 'test_recall_gap', 'test_p_value_vs_random',\n",
-    "        ]])\n"
+    "        ]])\n",
+    "\n",
+    "        if curve_rows:\n",
+    "            df_threshold_curve_top = (\n",
+    "                pd.concat(curve_rows, ignore_index=True)\n",
+    "                .sort_values(\n",
+    "                    [\n",
+    "                        'model', 'birth_date', 'gauss_window', 'gauss_std',\n",
+    "                        'threshold_gap_penalty', 'threshold_prior_penalty',\n",
+    "                        'score', 'threshold',\n",
+    "                    ],\n",
+    "                    ascending=[True, True, True, True, True, True, False, True],\n",
+    "                )\n",
+    "                .reset_index(drop=True)\n",
+    "            )\n",
+    "\n",
+    "            print('Top threshold candidates by validation objective score:')\n",
+    "            display(df_threshold_curve_top[[\n",
+    "                'model', 'birth_date', 'birth_dt_utc', 'gauss_window', 'gauss_std', 'model_params_json',\n",
+    "                'threshold_gap_penalty', 'threshold_prior_penalty', 'threshold', 'score',\n",
+    "                'recall_min', 'recall_gap', 'prior_gap', 'pred_up_share', 'true_up_share',\n",
+    "                'accuracy', 'balanced_accuracy', 'mcc', 'f1_macro',\n",
+    "            ]])\n"
    ]
   },
   {
@@ -4252,7 +4306,7 @@
     "  - `GAUSS_WINDOWS`, `GAUSS_STDS`\n",
     "  - `XGB_PARAM_GRID`, `RF_PARAM_GRID`\n",
     "- Selection is validation-only; test is used only for final selected configs.\n",
-    "- Threshold sensitivity is controlled by `ENABLE_THRESHOLD_SENSITIVITY`, `THRESHOLD_GAP_PENALTY_GRID`, `THRESHOLD_PRIOR_PENALTY_GRID`.\n"
+    "- Threshold sensitivity is controlled by `ENABLE_THRESHOLD_SENSITIVITY`, `THRESHOLD_GAP_PENALTY_GRID`, `THRESHOLD_PRIOR_PENALTY_GRID`, `THRESHOLD_CANDIDATE_GRID`, `THRESHOLD_CURVE_TOP_K`.\n"
    ]
   }
  ],
